# snapvault

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
snapvault/: __init__.py  catalog.py  chunker.py  cli.py  snapshot.py  storage.py
tests/: __init__.py  test_backup_restore.py  test_catalog.py  test_chunker.py  test_cli_init.py  test_inspection.py  test_storage.py
