[project]
name = "snapvault"
version = "0.1.0"
description = "Content-addressed deduplicating backup CLI with incremental snapshots"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [ { name = "Nkt_SnapVault" } ]
dependencies = [
    "click>=8.1",
]

[project.scripts]
snapvault = "snapvault.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "--strict-markers"
